maybe (?) fix strange overflow margin on About page

--- a/source/assets/css/objects/_grid.scss
+++ b/source/assets/css/objects/_grid.scss
@@ -36,8 +36,6 @@
   flex: 0 1 auto;
   flex-direction: row;
   flex-wrap: wrap;
-  margin-right: var(--gutter-compensation, -0.5rem);
-  margin-left: var(--gutter-compensation, -0.5rem);
 }
 
 .row.reverse {
